# evc_group_4

./: .gitignore  .gitignore.swp  Dockerfile  README.md  ros-install-graphing.sh  setup_y.sh  start-docker-ubu.sh  start-docker-ubu_steve.sh  start-docker-win-ks.sh
.devcontainer/: Dockerfile
Videos/: LUCA.avi  MARTIJN.avi  TOAN.avi  video_3.avi
Videos/Karsten/: output1.avi
final_project/project_group4/src/assignment_3_ocr/: CMakeLists.txt  package.xml
final_project/project_group4/src/assignment_3_ocr/launch/: OCR_node.launch  movie_processor.launch  movie_processor_sub.launch  movie_publisher.launch
final_project/project_group4/src/assignment_3_ocr/msg/: vids.msg
final_project/project_group4/src/assignment_3_ocr/src/: Motor_OCR_node.py  OCR_node.py  R_Motor_OCR.py  movie_processor.py  movie_processor_subscriber.py  movie_publisher.py
final_project/project_group4/src/camera/: CMakeLists.txt  package.xml
final_project/project_group4/src/camera/launch/: camera_linefollower.launch  camera_linefollower_luka.launch  camera_processor.launch  camera_publisher.launch  camera_subscriber.launch  camera_undistorted.launch
final_project/project_group4/src/camera/msg/: ObjectDetection.msg  twovids.msg
final_project/project_group4/src/camera/src/: Motor_OCR_node.py  camera_qr.py  camera_recorder_subscriber_node.py  color_tuner.py  line_follower copy.py  line_follower.py  line_followerLuka.py  line_followerV2.py  line_followerV3.py  line_followerV4.py  line_follower_Luka.py  marti_linefollower.py  object_tracking.py  speed_change_OCR.py
final_project/project_group4/src/camera/srv/: ButtonPressed.srv
final_project/project_group4/src/jetson_camera/: CMakeLists.txt
final_project/project_group4/src/jetson_camera/launch/: camera_undistorted.launch
final_project/project_group4/src/jetson_camera/src/: camera_processor_node.py  camera_viewer_node.py  line_follower.py  marti_object_tracking.py
final_project/project_group4/src/mapping/: CMakeLists.txt  package.xml  setup.py
final_project/project_group4/src/mapping/launch/: mapping.launch
final_project/project_group4/src/mapping/src/mapping_node/: mapping_node.py
final_project/project_group4/src/mapping/src/mapping_node/drivers/Adafruit_Python_SSD1306/examples/: happycat_oled_64.ppm
final_project/project_group4/src/mapping/srv/: CollisionDetection.srv  MapTrack.srv
final_project/project_group4/src/motor_control/: CMakeLists.txt  package.xml  setup.py
final_project/project_group4/src/motor_control/config/: motor_param.yaml
final_project/project_group4/src/motor_control/config/drivers/: encoderDriver.py
final_project/project_group4/src/motor_control/launch/: driving.launch  luka_control copy.launch  luka_odometry.launch  martijn_control.launch  martijn_odometry.launch  motor_control.launch
final_project/project_group4/src/motor_control/msg/: encoder.msg  motor_cmd.msg
final_project/project_group4/src/motor_control/src/: .motor_control_node.py.swo  .motor_control_node.py.swp  .odometry_node.py.swp  Luka_control_node.py  Luka_odometry_node.py  marti_odometry_node.py  martijn_control_node.py  martijn_control_nodeV2.py  motorDriver.py  motor_control_node.py  motor_pub_node.py  odometry_node.py  robot_control_script.py
final_project/project_group4/src/motor_control/src/motor_control/: marti_motor_control_node.py  motor_control_node.py  motor_control_node_det.py  motor_services.py  odometry_node.py  robot_control_script.py  robot_control_script3.py
final_project/project_group4/src/motor_control/src/motor_control/drivers/: Adafruit_I2C.py
final_project/project_group4/src/motor_control/srv/: ConstRotate.srv  ConstStraight.srv  DriveLeftwheel.srv  DriveRightwheel.srv  LeftWheelDir.srv  MoveStraight.srv  Stop.srv
final_project/project_group4/src/sensor_reading/: CMakeLists.txt  package.xml
final_project/project_group4/src/sensor_reading/launch/: battery.launch  display.launch  imu.launch
final_project/project_group4/src/sensor_reading/src/: battery_monitor_service.py  battery_test.py  display_node.py  tof_pub_node.py
final_project/project_group4/src/sensor_reading/src/sensor_reading/: battery_monitor_service.py  battery_pub_node.py  button_monitor_node.py  button_monitor_service.py  collision_detection.py  collision_detection_node.py  display_node.py
final_project/project_group4/src/sensor_reading/src/sensor_reading/drivers/Adafruit_Python_SSD1306/examples/: happycat_oled_32.ppm
final_project/project_group4/src/sensor_reading/srv/: BatteryInfo.srv  ButtonPressed.srv
final_project/project_group4/src/test_pkgs/: CMakeLists.txt  package.xml
final_project/project_group4/src/test_pkgs/action/: CountUntil.action
final_project/project_group4/src/test_pkgs/src/: count_until_client.py  count_until_server.py  robot_control_script.py  robot_move_API.py  stop_robot_client.py  stop_robot_server.py
final_project/project_group4/src/test_pkgs/src/Old_scripts/: motor_GUI.py  odometry_node.py
testScripts/batteryScripts/: main.py
testScripts/controllerScript/: main.py
testScripts/displayScripts/: main.py
testScripts/encoderScripts/: main.py
workshops/workshop1/workshop1_1720996/src/assign1_package/: CMakeLists.txt  package.xml
workshops/workshop1/workshop1_2042347/src/workshop1_pkg/: CMakeLists.txt  package.xml
workshops/workshop1/workshop1_2042347/src/workshop1_pkg/src/: pub_node.py
workshops/workshop1_1446223/src/assignment_package/: CMakeLists.txt  package.xml
workshops/workshop1_1446223/src/assignment_package/src/: publisher_node.py
workshops/workshop1_2222302/src/workshop_1_package/: CMakeLists.txt  package.xml
workshops/workshop1_2222302/src/workshop_1_package/launch/: workshop_1_package.launch
workshops/workshop1_2222302/src/workshop_1_package/src/: publisher.py  subscriber.py
workshops/workshop2/workshop2_2042347/src/jetson_camera/: package.xml
workshops/workshop2/workshop2_2042347/src/jetson_camera/launch/: movie_subscriber.launch
workshops/workshop2/workshop2_2042347/src/jetson_camera/src/: movie_publisher_node.py  movie_subscriber_node.py  output.avi
(+161 files in other folders)
