<?xml version="1.0"?>
<package format="2">
    <name>motor_control</name>
    <version>0.1.0</version>
    <description>Group 4 final project package</description>

    <!-- Maintainership Information -->
    <maintainer email="v.rizeakos@student.tue.nl">V.Rizeakos</maintainer>
    <license>BSD</license>

    <!-- ROS dependencies -->
    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>cv_bridge</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>message_generation</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>nav_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>actionlib</build_depend>
    <build_depend>actionlib_msgs</build_depend>

    <!-- Runtime dependencies -->
    <exec_depend>cv_bridge</exec_depend>
    <exec_depend>rospy</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>
    <exec_depend>nav_msgs</exec_depend>
    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>message_runtime</exec_depend>
    <exec_depend>actionlib</exec_depend>
    <exec_depend>actionlib_msgs</exec_depend>

    <!-- Optional: testing dependencies -->
    <test_depend>rostest</test_depend>
    <test_depend>roslaunch</test_depend>
</package>