<?xml version="1.0"?>
<package format="2">
    <name>workshop_1_package</name>
    <version>0.1.0</version>
    <description>Workschop 1 package with subscriber and publisher nodes.</description>

    <!-- Maintainership Information -->
    <maintainer email="t.p.j.verrijt@student.tue.nl">T.Verrijt</maintainer>
    <license>BSD</license>

    <!-- ROS dependencies -->
    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>rospy</build_depend>
    <build_depend>std_msgs</build_depend>

    <!-- Runtime dependencies -->
    <exec_depend>rospy</exec_depend>
    <exec_depend>std_msgs</exec_depend>

    <!-- Optional: testing dependencies -->
    <test_depend>rostest</test_depend>
    <test_depend>roslaunch</test_depend>
</package>